# wscfront

./: .dockerignore  Dockerfile  Front.cabal  LICENSE  LICENSE.md  Main.hs  Makefile  README.md  WSC_route.tsv  app.py  bitbucket-pipelines.yml  front.plt  latest-bwsc2021.flux  latest-sample.flux  requirements.txt
static/: BWSC2021.kml  front.html
templates/: BWSC2021.kml  front.html  positions_map.html
