cabal-version:      3.0
name:               Front
version:            0.1.0.0
synopsis:           Calculate the Pareto Front for the Telememetry Challenge

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Peter Pudney
maintainer:         Peter.Pudney@unisa.edu.au

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable Front
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0,
                      process >=1.6,
                      split,
                      xml
    hs-source-dirs:   .
    default-language: Haskell2010
